--- a/flexio.yml
+++ b/flexio.yml
@@ -1,4 +1,4 @@
-title: Product Hunt Function Pack
+title: Product Hunt
 description: Functions for accessing your Product Hunt info
 image:
   src: https://static.flex.io/assets/logos2/product-hunt.png
