--- a/flexio.yml
+++ b/flexio.yml
@@ -14,29 +14,29 @@ templates:
     description: 'Import and filter current posts on Product Hunt in your spreadsheet'
     gsheets_spreadsheet_id: ''
     excel_spreadsheet_path: ''
-    in_production: false
-    in_staging: false
+    is_public: false
+    is_private: false
   - name: search-new-jobs
     title: 'Lookup new jobs on Product Hunt'
     description: 'Search and filter current jobs listed on Product Hunt'
     gsheets_spreadsheet_id: ''
     excel_spreadsheet_path: ''
-    in_production: false
-    in_staging: false
+    is_public: false
+    is_private: false
   - name: search-maker-activity
     title: 'Lookup maker activity on Product Hunt'
     description: 'Search and filter recent maker activity on Product Hunt'
     gsheets_spreadsheet_id: ''
     excel_spreadsheet_path: ''
-    in_production: false
-    in_staging: false
-  - name: search-past-posts 
+    is_public: false
+    is_private: false
+  - name: search-past-posts
     title: 'Lookup past Product Hunt posts'
     description: 'Search and filterpast posts on Product Hunt based on a date'
     gsheets_spreadsheet_id: ''
     excel_spreadsheet_path: ''
-    in_production: false
-    in_staging: false
+    is_public: false
+    is_private: false
 
 prompts:
   - element: auth
